[project]
name = "uvr-headless-runner"
version = "1.1.0"
description = "CLI audio source separation powered by Ultimate Vocal Remover — separate vocals, instruments, drums from any audio"
authors = [{ name = "UVR Headless Runner Contributors" }]
requires-python = ">=3.9,<4,<3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "audio",
    "vocal-remover",
    "source-separation",
    "uvr",
    "demucs",
    "mdx-net",
    "roformer",
    "music",
    "cli",
]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.23.5,<2",
    "scipy>=1.9.3,<2",
    "librosa>=0.9.2,<0.10",
    "soundfile>=0.11.0,<1.0",
    "audioread>=3.0.0,<4",
    "resampy>=0.4.2,<0.5",
    "pytorch-lightning>=2.0.0,<3",
    "einops>=0.8.0,<0.9",
    "ml-collections>=0.1.1,<0.2",
    "omegaconf>=2.2.3,<3",
    "onnx",
    "onnx2pytorch",
    "rotary-embedding-torch>=0.8.0,<0.9",
    "beartype>=0.15,<0.16",
    "julius>=0.2.7,<0.3",
    "pydub>=0.25.1,<0.26",
    "pyrubberband>=0.3.0,<0.4",
    "samplerate>=0.2.3,<0.3",
    "PyYAML>=6.0,<7",
    "natsort>=8.2.0,<9",
    "tqdm",
    "requests>=2.28",
    "rich>=13.0",
    "diffq>=0.2.4,<0.3",
    "onnxruntime>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/chyinan/uvr-headless-runner"
Repository = "https://github.com/chyinan/uvr-headless-runner"

[project.scripts]
uvr = "cli:main"
uvr-mdx = "mdx_headless_runner:main"
uvr-demucs = "demucs_headless_runner:main"
uvr-vr = "vr_headless_runner:main"

[dependency-groups]
dev = ["pytest>=7.0,<8"]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = [
    "cli.py",
    "mdx_headless_runner.py",
    "demucs_headless_runner.py",
    "vr_headless_runner.py",
    "model_downloader.py",
    "error_handler.py",
    "progress.py",
    "separate.py",
    "UVR.py",
    "__version__.py",
    "demucs",
    "lib_v5",
    "gui_data",
]

[tool.hatch.build.targets.sdist.force-include]
"models/**/*.json" = "models/**/*.json"
"models/**/*.yaml" = "models/**/*.yaml"
"models/**/*.txt" = "models/**/*.txt"
"lib_v5/**/*.json" = "lib_v5/**/*.json"
"lib_v5/**/*.ckpt" = "lib_v5/**/*.ckpt"
"gui_data/**/*.json" = "gui_data/**/*.json"
"gui_data/**/*.txt" = "gui_data/**/*.txt"

[tool.hatch.build.targets.wheel]
include = [
    "cli.py",
    "mdx_headless_runner.py",
    "demucs_headless_runner.py",
    "vr_headless_runner.py",
    "model_downloader.py",
    "error_handler.py",
    "progress.py",
    "separate.py",
    "UVR.py",
    "__version__.py",
    "demucs",
    "lib_v5",
    "gui_data",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
